# ccub

./: BUILD.bazel  README.md  WORKSPACE  build_log.proto  cclog.go  ccub.go  go.mod  metadata.proto  protos.proto  template.md
buildlog/: buildlog.go  dates.go  files.go
ccprotos/: metadata.pb.go
cli/: cli.go  cmds.go  dates.go  files.go
cmdlog/: cmdlog.go
cmds/: contains.go  interactive.go  log.go  render.go
cmds/log/: contains.go  interactive.go  log.go
cmds/render/: render.go
log/: buildlog.textproto
log/2022-Aug/: 2022-Aug-01.md  2022-Aug-06.md  2022-Aug-07.md  2022-Aug-13.md  2022-Aug-14.md  2022-Aug-15.md
log/2022-Jul/: 2022-Jul-02.md  2022-Jul-04.md  2022-Jul-06.md  2022-Jul-07.md
log/2022-Jun/: 2022-Jun-01.md  2022-Jun-04.md  2022-Jun-05.md  2022-Jun-11.md  2022-Jun-14.md  2022-Jun-22.md  2022-Jun-25.md  2022-Jun-30.md
log/2022-May/: 2022-May-08.md  2022-May-10.md  2022-May-12.md  2022-May-13.md  2022-May-14.md  2022-May-15.md  2022-May-16.md  2022-May-18.md  2022-May-20.md  2022-May-21.md  2022-May-28.md  2022-May-29.md  2022-May-31.md
log/2022-Sep/: 2022-Sep-03.md  2022-Sep-04.md  2022-Sep-05.md
log/2023-Aug/: 2023-Aug-02.md  2023-Aug-06.md  2023-Aug-13.md  2023-Aug-14.md  2023-Aug-20.md  2023-Aug-23.md
log/2023-Dec/: 2023-Dec-17.md  2023-Dec-19.md  2023-Dec-22.md  2023-Dec-23.md  2023-Dec-29.md  2023-Dec-30.md  2023-Dec-31.md
log/2023-Jul/: 2023-Jul-22.md  2023-Jul-25.md  2023-Jul-30.md
log/2023-Nov/: 2023-Nov-24.md
log/2023-Oct/: 2023-Oct-03.md  2023-Oct-07.md  (+3 more)
logprotos/: metadata.pb.go
protos/: protos.pb.go  protos.proto
(+45 files in other folders)
