load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

package(default_visibility=["//visibility:public"])

proto_library(
    name = "build_log_proto",
    srcs = ["build_log.proto"],
    deps = ["@com_google_protobuf//:timestamp_proto"],
)

go_proto_library(
    name = "build_log_go_proto",
    importpath = "github.com/cragcraig/carboncub-build-log/build_log_proto",
    protos = [":build_log_proto"],
)

